An implementation for the MDRDriver that can be used inside BMTL sources
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@141 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
@@ -6,5 +6,8 @@
     <classpathentry kind="src" path="/MTDataTypes"/>
     <classpathentry kind="src" path="/RepositoryAPI"/>
     <classpathentry kind="src" path="/BasicMTLRuntime"/>
+    <classpathentry kind="src" path="/MDRDriver"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
