The SimpleUML2SimpleRDBMS v1 works (no association)
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@154 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
@@ -9,5 +9,6 @@
     <classpathentry kind="src" path="/MDRDriver"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/Utils"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/JUnit/junit.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
