Generic visitors in Utils project
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@170 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtlAstJava/.project
+++ b/BasicMTL_projects/BasicMtlAstJava/.project
@@ -3,6 +3,7 @@
 	<name>BasicMtlAstJava</name>
 	<comment></comment>
 	<projects>
+		<project>Utils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
