--- a/BasicMTL_projects/BasicMtl2Java/build.xml
+++ b/BasicMTL_projects/BasicMtl2Java/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2003-09-02 09:49:02 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-09-02 15:54:21 dvojtise Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="dist" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -127,6 +127,9 @@
   		</copy>
   		<copy  todir="${dist}/bin/Thirdparty/ANTLR">
   			<fileset dir="${BasicMtlAntlr}/Thirdparty/ANTLR"/>
+  		</copy>
+  		<copy  todir="${dist}/bin/Thirdparty/MDR">
+  			<fileset dir="${MDRDriver}/dist/bin/Thirdparty/MDR"/>
   		</copy>
   		
   		<mkdir dir="${dist}/Runtime/"/>
