--- a/BasicMTL_projects/BasicMTLRuntime/build.xml
+++ b/BasicMTL_projects/BasicMTLRuntime/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-08-14 21:05:08 ffondeme Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-09-05 12:15:25 dvojtise Exp $ -->
 <!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
 <project name="BasicMTLRuntime" default="dist" basedir=".">
 	<description>
@@ -34,7 +34,8 @@
     	<!-- Compile the java code from ${src} into ${bin} -->
 	    <javac srcdir="${src}"
     	    destdir="${bin}"
-   			classpath=".;${RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"
+   			debug="true"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
