--- a/RepositoryDriver_projects/MDRDriver/build.xml
+++ b/RepositoryDriver_projects/MDRDriver/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-08-14 20:32:27 ffondeme Exp $ -->
+<!-- $Id: build.xml,v 1.4 2003-09-05 12:13:43 dvojtise Exp $ -->
 <!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
 <project name="MDRDriver" default="dist" basedir=".">
 	<description>
@@ -37,7 +37,8 @@
     	<!-- Compile the java code from ${src},${srcOfp} into ${bin} -->
 	    <javac srcdir="${src}"
     	    destdir="${bin}"
-   			classpath=".;${mdr.jars.src};${RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${mdr.jars.src};${RepositoryAPI}\bin;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"
+   			debug="true"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
