--- a/RepositoryDriver_projects/RepositoryAPI/build.xml
+++ b/RepositoryDriver_projects/RepositoryAPI/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-08-11 18:59:36 ffondeme Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-09-05 12:13:46 dvojtise Exp $ -->
 <!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
 <project name="RepositoryAPI" default="dist" basedir=".">
 	<description>
@@ -34,7 +34,8 @@
     	<!-- Compile the java code from ${src},${srcOfp} into ${bin} -->
 	    <javac srcdir="${src};${srcOfp}"
     	    destdir="${bin}"
-   			classpath=".;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${MTDataTypes}\bin;${Utils}\bin;..\Utils\ThirdParty\junit\junit.jar;..\Utils\ThirdParty\log4j\log4j.jar"
+   			debug="true"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
