*** empty log message ***
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@193 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl2Java/.project
+++ b/BasicMTL_projects/BasicMtl2Java/.project
@@ -3,6 +3,10 @@
 	<name>BasicMtl2Java</name>
 	<comment></comment>
 	<projects>
+		<project>BasicMTLRuntime</project>
+		<project>MDRDriver</project>
+		<project>MTDataTypes</project>
+		<project>Utils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
