--- a/BasicMTL_projects/BasicMtl2Java/.classpath
+++ b/BasicMTL_projects/BasicMtl2Java/.classpath
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path=""/>
+    <classpathentry kind="src" path="dist/sample/src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="output" path=""/>
+    <classpathentry kind="src" path="/BasicMTLRuntime"/>
+    <classpathentry kind="src" path="/MTDataTypes"/>
+    <classpathentry kind="src" path="/Utils"/>
+    <classpathentry kind="src" path="/MDRDriver"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="output" path="bin"/>
 </classpath>
