--- a/UML1.4_projects/UML1.4/.classpath
+++ b/UML1.4_projects/UML1.4/.classpath
@@ -9,5 +9,6 @@
     <classpathentry kind="src" path="/RepositoryAPI"/>
     <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="lib" path="/Utils/dist/bin/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/BasicMtl_Transformation_libraries"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
