--- a/UML1.4_projects/UML1.4/.project
+++ b/UML1.4_projects/UML1.4/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>BasicMTLRuntime</project>
+		<project>BasicMtl_Transformation_libraries</project>
 		<project>MDRDriver</project>
 		<project>MTDataTypes</project>
 		<project>RepositoryAPI</project>
