--- a/BasicMTL_projects/TLLTypeChecker/.project
+++ b/BasicMTL_projects/TLLTypeChecker/.project
@@ -9,6 +9,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.antlr.eclipse.core.antlrbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -16,5 +21,6 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.antlr.eclipse.core.antlrnature</nature>
 	</natures>
 </projectDescription>
