Library inheritance in progress
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@210 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtlAntlr2TLLJava/.project
+++ b/BasicMTL_projects/BasicMtlAntlr2TLLJava/.project
@@ -3,10 +3,14 @@
 	<name>BasicMtlAntlr2TLLJava</name>
 	<comment></comment>
 	<projects>
+		<project>BasicMTLRuntime</project>
 		<project>BasicMtlAntlr</project>
+		<project>BasicMtlAntlr2ASTView</project>
 		<project>BasicMtlAntlr2BasicMtlAstJava</project>
 		<project>BasicMtlAstJava</project>
 		<project>BasicMtlTLLJava</project>
+		<project>BasicMtl_Transformation_libraries</project>
+		<project>MTDataTypes</project>
 		<project>Utils</project>
 	</projects>
 	<buildSpec>
