View including Association (in progress) extends View on BasicMtlASTJava
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@214 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>BasicMTLRuntime</project>
+		<project>BasicMtlAstJava</project>
 		<project>MDRDriver</project>
 		<project>MTDataTypes</project>
 		<project>RepositoryAPI</project>
