--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
@@ -3,12 +3,13 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="src" path="build/src/java"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="src" path="/MTDataTypes"/>
     <classpathentry kind="src" path="/RepositoryAPI"/>
-    <classpathentry kind="src" path="/BasicMTLRuntime"/>
     <classpathentry kind="src" path="/MDRDriver"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/JUnit/junit.jar"/>
+    <classpathentry kind="src" path="/BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/BasicMTLRuntime"/>
+    <classpathentry kind="src" path="/MTDataTypes"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
