ok for beta 2 see bugzilla for all corrected bugs
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@229 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/TLLTypeChecker/.project
+++ b/BasicMTL_projects/TLLTypeChecker/.project
@@ -3,6 +3,7 @@
 	<name>TLLTypeChecker</name>
 	<comment></comment>
 	<projects>
+		<project>BasicMtlAntlr</project>
 		<project>BasicMtlAntlr2TLLJava</project>
 		<project>BasicMtlTLLJava</project>
 		<project>Utils</project>
