--- a/BasicMTL_projects/TLLTypeChecker/.classpath
+++ b/BasicMTL_projects/TLLTypeChecker/.classpath
@@ -6,5 +6,6 @@
     <classpathentry kind="src" path="/BasicMtlAntlr2TLLJava"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/Utils"/>
+    <classpathentry kind="src" path="/BasicMtlAntlr"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
